feat: tela cadastro ong adicionada

--- a/CRUD-WPF/CRUD-WPF.csproj
+++ b/CRUD-WPF/CRUD-WPF.csproj
@@ -55,6 +55,15 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="CadastroOng.xaml.cs">
+      <DependentUpon>CadastroOng.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="RelayCommand.cs" />
+    <Compile Include="ViewModel\MainWindowVM.cs" />
+    <Page Include="CadastroOng.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -69,6 +78,10 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\Ong.cs" />
+    <Compile Include="Model\Pet.cs" />
+    <Compile Include="Model\Porte.cs" />
+    <Compile Include="Model\Sexo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
