--- a/CRUD-WPF/CRUD-WPF.csproj
+++ b/CRUD-WPF/CRUD-WPF.csproj
@@ -55,12 +55,20 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="BaseNotifyPropertyChanged.cs" />
     <Compile Include="CadastroOng.xaml.cs">
       <DependentUpon>CadastroOng.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="CadastroPet.xaml.cs">
+      <DependentUpon>CadastroPet.xaml</DependentUpon>
     </Compile>
     <Compile Include="RelayCommand.cs" />
     <Compile Include="ViewModel\MainWindowVM.cs" />
     <Page Include="CadastroOng.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="CadastroPet.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
